# NurbsLab

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: math_notes.md
examples/: CMakeLists.txt  circle_approx.cpp
include/nurbslab/: concepts.h  knot_vector.h  nurbs_curve.h  vec3.h
include/nurbslab/algorithms/: evaluate.h  intersection.h  projection.h
src/: knot_vector.cpp  nurbs_curve.cpp
src/algorithms/: intersection.cpp  projection.cpp
tests/: CMakeLists.txt  test_evaluate.cpp  test_intersection.cpp  test_projection.cpp
